@@ -1,3 +1,11 @@
+2008-03-07  Ronaldo Maia  <romaia@async.com.br>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/comboentry.py:
+	* kiwi/ui/entrycompletion.py: Handle case when entry completion is poping
+	up and the entry loses focus. Fixes bug #3639
+
 2008-03-06  Johan Dahlin  <johan@gnome.org>
 
 	* po/es_CL: Added Spanish/Chilean translation
